--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react-native-swiper": "^1.5.4"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
+    "eslint": "^3.17.1",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "jest": "19.0.2",
     "react-test-renderer": "15.4.2"
   },
