--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.0",
-    "react-native-swiper": "^1.5.4"
+    "react-native-swiper": "^1.5.4",
+    "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
