--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,11 +1,16 @@
 rootProject.name = 'AwesomeProject'
 
 include ':app'
+include ':react-native-cookies'
+project(':react-native-cookies').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-cookies/android')
 
 // 百度地图
 include ':react-native-baidu-map'
 project(':react-native-baidu-map').projectDir = new File(settingsDir,'../node_modules/react-native-baidu-map/android')
 
 // 高德地图
-include ':react-native-smart-amap'
-project(':react-native-smart-amap').projectDir = new File(settingsDir, '../node_modules/react-native-smart-amap/android')
+// include ':react-native-smart-amap'
+// project(':react-native-smart-amap').projectDir = new File(settingsDir, '../node_modules/react-native-smart-amap/android')
+
+include ':react-native-cookies'
+project(':react-native-cookies').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-cookies/android')
