--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-baidu-map": "^0.6.0",
+    "react-native-button": "^1.8.2",
+    "react-native-cookies": "^2.0.0",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-smart-amap": "^1.0.2",
     "react-native-swiper": "^1.5.4",
