--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-cookies": "^2.0.0",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-smart-amap": "^1.0.2",
+    "react-native-storage": "^0.1.5",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-navigation": "^1.0.0-beta.7"
