--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,12 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
+    compile project(':react-native-video')
+    compile project(':react-native-image-crop-picker')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-smart-amap')
+    compile project(':react-native-image-picker')
     compile project(':react-native-cookies')
     compile project(':react-native-baidu-map')
     // compile project(':react-native-smart-amap')
