--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "react-native-baidu-map": "^0.6.0",
     "react-native-button": "^1.8.2",
     "react-native-cookies": "^2.0.0",
+    "react-native-image-crop-picker": "^0.12.8",
+    "react-native-image-picker": "^0.26.2",
     "react-native-scrollable-tab-view": "^0.7.2",
     "react-native-smart-amap": "^1.0.2",
+    "react-native-splash-screen": "^2.0.0",
     "react-native-storage": "^0.1.5",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
+    "react-native-video": "^1.0.0",
     "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
