--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -2,5 +2,5 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=file\:///F:/react-native/gradle/gradle-2.14.1-all.zip
-# distributionUrl=file\:///C:/Users/xiaoFen/Desktop/work%20space/gradle/gradle-2.14.1-all.zip
+# distributionUrl=file\:///F:/react-native/gradle/gradle-2.14.1-all.zip
+distributionUrl=file\:///C:/Users/xiaoFen/Desktop/work%20space/gradle/gradle-2.14.1-all.zip
